# QueryCraft

./: .dockerignore  .env.example  .env.local  .env.prod.example  .gitignore  .ruffignore  Dockerfile  Dockerfile.ollama  MIGRATION_NOTES.md  README.md  docker-compose.yml  entrypoint.ollama.sh  entrypoint.sh  info.md  init_ollama.sh  justfile  manage.py  pyproject.toml
.github/workflows/: ci.yml  lint.yml
hello/: views.py
helloworld/: asgi.py  settings.py  urls.py  wsgi.py
ollama/: Dockerfile  Modelfile  entrypoint.sh
querycraft/: admin.py  apps.py  models.py  services.py  test_services.py  urls.py  views.py
querycraft/management/commands/: create_sample_data.py  generate_fake_data.py  process_resumes.py  seed_db.py
querycraft/migrations/: 0001_initial.py  0002_profile.py
querycraft/services/: __init__.py  profile_extractor.py  resume_parser.py  sql_agent.py
querycraft/services/tests/: test_services.py
querycraft/templates/querycraft/: api_client.html  query_form.html
querycraft_project/: asgi.py  settings.py  urls.py  wsgi.py
