[project]
name = "querycraft"
version = "0.1.0"
description = "QueryCraft - AI-powered natural language to SQL query converter"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.2",
    "psycopg[binary]>=3.2.12",
    "Faker>=20.0.0",
    "langgraph>=0.0.40",
    "langchain-core>=0.1.0",
    "langchain-ollama>=0.1.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.5",
    "django-stubs>=5.0.0",
    "types-requests>=2.31.0",
]

[tool.ruff]
# Ruff configuration
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "ARG001", # unused function argument (common in Django views)
    "ARG002", # unused method argument
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["querycraft", "querycraft_project"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"migrations/*" = ["ALL"]  # ignore migrations
"manage.py" = ["T201"]    # print statements allowed

[tool.mypy]
# Mypy configuration
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true

# Django settings
plugins = ["mypy_django_plugin"]

[tool.django-stubs]
django_settings_module = "querycraft_project.settings"

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain_core.*",
    "langchain_ollama.*",
    "pydantic.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "querycraft.migrations.*",
]
ignore_errors = true
