[project]
name = "querycraft"
version = "0.1.0"
description = "QueryCraft - AI-powered natural language to SQL query converter"
requires-python = ">=3.13"
dependencies = [
  "Django>=5.2",
  "psycopg[binary]>=3.2.12",
  "Faker>=20.0.0",
  "langgraph>=0.0.40",
  "langchain-core>=0.1.0",
  "langchain-ollama>=0.1.0",
  "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "ruff>=0.14.5",
  "django-stubs>=5.0.0",
  "types-requests>=2.31.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "querycraft_project.settings"
