[project]
name = "querycraft"
version = "0.1.0"
description = "QueryCraft - AI-powered natural language to SQL query converter"
requires-python = ">=3.13"
dependencies = [
  "Django>=5.2",
  "psycopg[binary]>=3.2.12",
  "Faker>=20.0.0",
  "langgraph>=0.0.40",
  "langchain-core>=0.1.0",
  "langchain-ollama>=0.1.0",
  "pydantic>=2.0.0",
  "pdfplumber>=0.11.0",
]

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "ruff>=0.14.5",
  "django-stubs>=5.0.0",
  "types-requests>=2.31.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.13"

# Strict mode - enables all optional error checking flags
strict = true

# Performance optimization (new in 1.18+)
fixed_format_cache = true

# Import discovery
namespace_packages = true
explicit_package_bases = true

# Warnings
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

# Error messages
show_error_codes = true
show_column_numbers = true
pretty = true

# Exclude patterns
exclude = ["^.venv/", "^venv/", "^migrations/", "^tests/"]

[tool.django-stubs]
django_settings_module = "querycraft_project.settings"